# android-ndk-rust

./: Cargo.toml  README.md
src/: printer_util.rs
